# dismissal-prediction-service

./: .gitignore  README.md  pyproject.toml
db/: config.yaml  create_db.py  scrap_enron_email_dataset.py  tables.py
db/scripts/: create_table_messages.sql
model/: model.py
notebooks/: enron_email_data_research.ipynb  evaluation_and_training.ipynb
